Update and rename XTT@CTC.ini to XTT@CTC@XFSS.ini

--- a/XTT@CTC@XFSS.ini
+++ b/XTT@CTC@XFSS.ini
@@ -70,12 +70,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💡 OpenAi`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
@@ -96,7 +96,7 @@ custom_proxy_group=📺 emby`select`[]DIRECT`[]🌏 低倍节点
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点
 custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Game`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Game`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
@@ -104,18 +104,42 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🌏 低倍节点
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 XFSS`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`fallback`[]🇹🇼 守候低倍`[]🇹🇼 XFSS`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`fallback`[]🇸🇬 守候低倍`[]🇸🇬 XFSS`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`fallback`[]🇯🇵 守候低倍`[]🇯🇵 XFSS`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`fallback`[]🇺🇲 守候低倍`[]🇺🇲 XFSS`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`fallback`[]🇰🇷 守候低倍`[]🇰🇷 XFSS`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 CTC`[]🇭🇰 守候高级`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 CTC`[]🇹🇼 守候高级`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`fallback`[]🇸🇬 CTC`[]🇸🇬 守候高级`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`fallback`[]🇯🇵 CTC`[]🇯🇵 守候高级`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国高级`fallback`[]🇺🇲 CTC`[]🇺🇲 守候高级`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(KR))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国高级`fallback`[]🇰🇷 守候高级`http://www.gstatic.com/generate_204`300,,500
+
+# HK
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 XFSS`url-test`^(?=.*(香港)).*$`http://www.gstatic.com/generate_204`300,,50
+
+# TW
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 XFSS`url-test`^(?=.*(台湾)).*$`http://www.gstatic.com/generate_204`300,,50
+
+# SG
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 XFSS`url-test`^(?=.*(新加坡)).*$`http://www.gstatic.com/generate_204`300,,50
+
+# JP
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 XFSS`url-test`^(?=.*(日本)).*$`http://www.gstatic.com/generate_204`300,,50
+
+# US
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 XFSS`url-test`^(?=.*(美国)).*$`http://www.gstatic.com/generate_204`300,,50
+
+# KR
+custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 XFSS`url-test`^(?=.*(韩国)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # HK
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
@@ -136,6 +160,9 @@ custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO)).*$`http://www.gs
 # US
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(ATT)).*$`http://www.gstatic.com/generate_204`300,,50
+
+# KR
+custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9]))(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
 
