--- a/XTT@CTC@XFSS.ini
+++ b/XTT@CTC@XFSS.ini
@@ -73,31 +73,31 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💡 OpenAi`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
 custom_proxy_group=💡 AI工具`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国高级`
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国高级
 custom_proxy_group=📱 Telegram`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📱 Facebook`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Twitter`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Line`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Twitter`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Line`select`[]🇹🇼 台湾低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🤝 Whatsapp`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 xttlove`select`[]🌏 守候线路
 custom_proxy_group=📺 emby`select`[]DIRECT`[]🌏 低倍节点
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点
-custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Game`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Game`select`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
