--- a/XTT@CTC@XFLTD.ini
+++ b/XTT@CTC@XFLTD.ini
@@ -102,7 +102,7 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🌏 低倍节点
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
 custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 XFSS`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾低倍`fallback`[]🇹🇼 守候低倍`[]🇹🇼 XFSS`http://www.gstatic.com/generate_204`300,,50
