--- a/XTT@CTC@MESL.ini
+++ b/XTT@CTC@MESL.ini
@@ -77,8 +77,8 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ Microsoft`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💡 OpenAi`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国高级`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国高级`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
 custom_proxy_group=💡 AI工具`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
