--- a/XTT@CTC@MESL.ini
+++ b/XTT@CTC@MESL.ini
@@ -137,11 +137,11 @@ custom_proxy_group=🇯🇵 MESL低倍`url-test`^(?=.*(JP))(?=.*(0.2x)).*$`http:
 
 # US
 custom_proxy_group=🇺🇲 守候低倍`url-test`^(?=.*(US))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 MESL低倍`url-test`^(?=.*(US))(?=.*(0.2x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 MESL低倍`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Amazon|Misaka|Spectrum|Sprint|AT&T|Verizon)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # KR
 custom_proxy_group=🇰🇷 守候低倍`url-test`^(?=.*(KR))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 MESL低倍`url-test`^(?=.*(KR))(?=.*(0.2x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 MESL低倍`url-test`^(?=.*(KR))(?=.*(Amazon))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # HK
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
