--- a/XTT@CTC@MESL.ini
+++ b/XTT@CTC@MESL.ini
@@ -145,7 +145,7 @@ custom_proxy_group=🇰🇷 MESL低倍`url-test`^(?=.*(KR))(?=.*(Amazon))(?!.*(U
 
 # HK
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 MESL高级`url-test`^(?=.*(HK))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 MESL高级`url-test`^(?=.*(HK))(?=.*(UDPN 3x))(?!.*(ALI|Aliyun)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(DMIT))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # TW
@@ -155,7 +155,7 @@ custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1x)).*$`htt
 
 # SG
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(UDPN 3x))(?!.*(Aliyun)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP
