--- a/XTT@MESL@CTC.ini
+++ b/XTT@MESL@CTC.ini
@@ -178,12 +178,12 @@ custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IPLC)).*$`htt
 custom_proxy_group=🇰🇷 MESL高级`url-test`^(?=.*(KR))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # 游戏节点
-custom_proxy_group=🇭🇰 香港游戏`url-test`^(?=.*(HK))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港游戏`url-test`^(?=.*(HK))(?=.*(Ucloud)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾游戏`url-test`^(?=.*(TW))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城游戏`url-test`^(?=.*(SG))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本游戏`url-test`^(?=.*(JP))(?=.*(Catixs)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国游戏`url-test`^(?=.*(US))(?=.*(T-mobile)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国游戏`url-test`^(?=.*(KR))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国游戏`url-test`^(?=.*(KR))(?=.*(Ucloud)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
 
