--- a/XTT@MESL@CTC.ini
+++ b/XTT@MESL@CTC.ini
@@ -11,6 +11,7 @@
 
 ;设置规则标志位
 ruleset=Ⓜ️ Bing,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
+ruleset=Ⓜ️ Bing,https://raw.githubusercontent.com/Yzaams/clash/main/bing.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GovCN/GovCN.list
