--- a/XTT@MESL@CTC.ini
+++ b/XTT@MESL@CTC.ini
@@ -10,6 +10,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/Windows%20Update.list
 ruleset=Ⓜ️ Bing,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
 ruleset=Ⓜ️ Bing,https://raw.githubusercontent.com/Yzaams/clash/main/bing.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
@@ -61,6 +62,7 @@ ruleset=🎮 游戏下载,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎮 游戏加速,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 ruleset=🌍 国内直连,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%86%85%E7%9B%B4%E8%BF%9E.list
 ruleset=🌍 国外代理,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%A4%96%E4%BB%A3%E7%90%86.list
+
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
