--- a/Done/XTT@MESL@CTC.ini
+++ b/Done/XTT@MESL@CTC.ini
@@ -129,7 +129,7 @@ custom_proxy_group=🎮 游戏下载`select`[]DIRECT`[]🌏 低倍节点
 
 custom_proxy_group=🎮 游戏加速`select`[]DIRECT`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🌍 国内直连`select`[]DIRECT
+custom_proxy_group=🌏 国内直连`select`[]DIRECT
 
 custom_proxy_group=🌍 国外代理`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 
