--- a/Done/XTT@MESL@CTC.ini
+++ b/Done/XTT@MESL@CTC.ini
@@ -27,6 +27,7 @@ ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/m
 ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
 ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Notion/Notion.list
 ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
+ruleset=🎓 AI,https://raw.githubusercontent.com/Yzaams/clash/main/rule/bing.list
 ruleset=🎓 AI,https://raw.githubusercontent.com/Yzaams/clash/main/rule/AI.list
 
 ruleset=☁️ 谷歌云盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.list
