--- a/Done/XTT@MESL@CTC.ini
+++ b/Done/XTT@MESL@CTC.ini
@@ -75,8 +75,10 @@ ruleset=🎮 游戏下载,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎮 游戏加速,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 ruleset=🎮 游戏加速,https://raw.githubusercontent.com/Yzaams/clash/main/rule/Game.list
 
+ruleset=🌏 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌏 国内直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/%E5%9B%BD%E5%86%85%E7%9B%B4%E8%BF%9E.list
 
+ruleset=🌍 国外代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🌍 国外代理,https://raw.githubusercontent.com/Yzaams/clash/main/rule/%E5%9B%BD%E5%A4%96%E4%BB%A3%E7%90%86.list
 
 ruleset=🌍 守候线路,https://raw.githubusercontent.com/Yzaams/clash/main/rule/xttlove.list
