--- a/test.ini
+++ b/test.ini
@@ -1,13 +1,5 @@
 [custom]
-;不要随意改变关键字，否则会导致出错
-;acl4SSR规则
-
-;去广告：支持
-;自动测速：支持
-;微软分流：支持
-;苹果分流：支持
-;增强中国IP段：支持
-;增强国外GFW：支持
+;blackmatrix7规则
 
 ;设置规则标志位
 ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
@@ -171,7 +163,9 @@ custom_proxy_group=📵 Advertising`select`[]REJECT`[]DIRECT
 custom_proxy_group=🚫 Reject`select`[]REJECT`[]DIRECT
 
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
+;设置分组标志位
 
+;设置节点筛选标志位
 custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 MESL低倍`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾低倍`fallback`[]🇹🇼 守候低倍`[]🇹🇼 MESL低倍`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城低倍`fallback`[]🇸🇬 守候低倍`[]🇸🇬 MESL低倍`http://www.gstatic.com/generate_204`300,,50
@@ -249,6 +243,7 @@ custom_proxy_group=🇰🇷 韩国游戏`url-test`^(?=.*(KR))(?=.*(Ucloud)).*$`h
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+;设置节点筛选标志位
 
 enable_rule_generator=true
 overwrite_original_rules=true
