--- a/test.ini
+++ b/test.ini
@@ -17,7 +17,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/Windows%20Update.list
-
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/%E5%9B%BD%E5%86%85%E7%9B%B4%E8%BF%9E.list
 
 ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
@@ -95,8 +95,6 @@ ruleset=🎮 游戏下载,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎮 游戏加速,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 ruleset=🎮 游戏加速,https://raw.githubusercontent.com/Yzaams/clash/main/rule/Game.list
 
-ruleset=🌏 国内直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/%E5%9B%BD%E5%86%85%E7%9B%B4%E8%BF%9E.list
-
 ruleset=🌍 国外代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
 ruleset=🌍 国外代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🌍 国外代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleProxy/AppleProxy.list
@@ -149,8 +147,6 @@ custom_proxy_group=🎮 Bahamut`select`[]🇯🇵 日本低倍`[]🇹🇼 台湾
 custom_proxy_group=🎮 游戏下载`select`[]DIRECT`[]🌏 低倍节点
 
 custom_proxy_group=🎮 游戏加速`select`[]DIRECT`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏`[]🚀 节点选择`[]🚀 手动切换
-
-custom_proxy_group=🌏 国内直连`select`[]DIRECT
 
 custom_proxy_group=🌍 国外代理`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 
