--- a/test2.ini
+++ b/test2.ini
@@ -1,6 +1,6 @@
 [custom]
 ;不要随意改变关键字，否则会导致出错
-;acl4SSR规则
+;blackmatrix7
 
 ;去广告：支持
 ;自动测速：支持
@@ -8,6 +8,7 @@
 ;苹果分流：支持
 ;增强中国IP段：支持
 ;增强国外GFW：支持
+
 
 ;设置规则标志位
 ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
@@ -118,56 +119,88 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
-;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级
-custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎓 AI`select`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=☁️ 谷歌云盘`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🛍️ GooglePlay`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Youtube`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🌐 谷歌服务`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
+;设置节点筛选标志位
+custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 MESL低倍`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`fallback`[]🇹🇼 守候低倍`[]🇹🇼 MESL低倍`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`fallback`[]🇸🇬 守候低倍`[]🇸🇬 MESL低倍`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`fallback`[]🇯🇵 守候低倍`[]🇯🇵 MESL低倍`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`fallback`[]🇺🇲 守候低倍`[]🇺🇲 MESL低倍`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`fallback`[]🇰🇷 守候低倍`[]🇰🇷 MESL低倍`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 MESL高级`[]🇭🇰 CTC`[]🇭🇰 守候高级`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 MESL高级`[]🇹🇼 CTC`[]🇹🇼 守候高级`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城高级`fallback`[]🇸🇬 MESL高级`[]🇸🇬 CTC`[]🇸🇬 守候高级`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本高级`fallback`[]🇯🇵 MESL高级`[]🇯🇵 CTC`[]🇯🇵 守候高级`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国高级`fallback`[]🇺🇲 MESL高级`[]🇺🇲 CTC`[]🇺🇲 守候高级`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国高级`fallback`[]🇰🇷 MESL高级`[]🇰🇷 守候高级`http://www.gstatic.com/generate_204`300,,500
 
-custom_proxy_group=☁️ 微软云盘`select`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🇸🇬 狮城高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+# HK
+custom_proxy_group=🇭🇰 守候低倍`url-test`^(?=.*(HK))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 MESL低倍`url-test`^(?=.*(HK))(?=.*(0.2x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT
+# TW
+custom_proxy_group=🇹🇼 守候低倍`url-test`^(?=.*(TW))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 MESL低倍`url-test`^(?=.*(TW))(?=.*(0.2x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+# SG
+custom_proxy_group=🇸🇬 守候低倍`url-test`^(?=.*(SG))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 MESL低倍`url-test`^(?=.*(SG))(?=.*(0.2x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🤝 Telegram`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Facebook`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Twitter`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+# JP
+custom_proxy_group=🇯🇵 守候低倍`url-test`^(?=.*(JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 MESL低倍`url-test`^(?=.*(JP))(?=.*(0.2x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎧 Shopify`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+# US
+custom_proxy_group=🇺🇲 守候低倍`url-test`^(?=.*(US))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 MESL低倍`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Amazon|Misaka|Spectrum|Sprint|AT&T|Verizon)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=📺 TikTok`select`[]🇯🇵 日本低倍`[]🚀 节点选择`[]🚀 手动切换
+# KR
+custom_proxy_group=🇰🇷 守候低倍`url-test`^(?=.*(KR))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 MESL低倍`url-test`^(?=.*(KR))(?=.*(Amazon))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=📺 TikTok`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+# HK
+custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 MESL高级`url-test`^(?=.*(HK))(?=.*(Eons|Dmit|HKT|HKBN|Catixs))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(DMIT))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+# TW
+custom_proxy_group=🇹🇼 守候高级`url-test`^(?=.*(TW))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 MESL高级`url-test`^(?=.*(TW))(?=.*(SoNet|Akile|Akari|Nerocloud))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎮 Bahamut`select`[]🇯🇵 日本低倍`[]🇹🇼 台湾低倍`[]🚀 节点选择`[]🚀 手动切换
+# SG
+custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|DigitalOcean|Cloudflare|Amazon|Eons|SG.GS))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎮 游戏下载`select`[]DIRECT`[]🌏 低倍节点
+# JP
+custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 MESL高级`url-test`^(?=.*(JP))(?=.*(Akari|Catixs|Amazon|Cloudflare|KDDI|SoNet|Akari|Softbank|Misaka|Google))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO))|(?=.*(JP))(?=.*(IEPL))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎮 游戏加速`select`[]DIRECT`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏`[]🚀 节点选择`[]🚀 手动切换
+# US
+custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 MESL高级`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Amazon|Misaka|Spectrum|Sprint|AT&T|Verizon|Cloudflare|Google))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(ATT)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌍 国外代理`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
+# KR
+custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 MESL高级`url-test`^(?=.*(KR))(?=.*(Eons|Dmit|HKT|HKBN|Catixs))(?!.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌍 守候线路`select`[]🌏 守候线路
+# 游戏节点
+custom_proxy_group=🇭🇰 香港游戏`url-test`^(?=.*(HK))(?=.*(Ucloud)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾游戏`url-test`^(?=.*(TW))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城游戏`url-test`^(?=.*(SG))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本游戏`url-test`^(?=.*(JP))(?=.*(Catixs)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国游戏`url-test`^(?=.*(US))(?=.*(T-mobile)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国游戏`url-test`^(?=.*(KR))(?=.*(Ucloud)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=📵 Advertising`select`[]REJECT`[]DIRECT
+custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
+;设置节点筛选标志位
 
-custom_proxy_group=🚫 Reject`select`[]REJECT`[]DIRECT
-
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
-;设置分组标志位
 enable_rule_generator=true
 overwrite_original_rules=true
 
