--- a/test2.ini
+++ b/test2.ini
@@ -11,14 +11,6 @@
 
 
 ;设置规则标志位
-ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
-ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
-ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ZhihuAds/ZhihuAds.list
-ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingMiTV/AdvertisingMiTV.list
-
-ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
-ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
-
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GovCN/GovCN.list
@@ -27,6 +19,14 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/Windows%20Update.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/%E5%9B%BD%E5%86%85%E7%9B%B4%E8%BF%9E.list
+
+ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
+ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
+ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ZhihuAds/ZhihuAds.list
+ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingMiTV/AdvertisingMiTV.list
+
+ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
+ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
 
 ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🎓 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
@@ -119,7 +119,54 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
+;设置分组标志位
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级
+custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
+custom_proxy_group=🎓 AI`select`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=☁️ 谷歌云盘`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🛍️ GooglePlay`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Youtube`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌐 谷歌服务`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=☁️ 微软云盘`select`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🇸🇬 狮城高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT
+
+custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=🤝 Telegram`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Facebook`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Twitter`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=🎧 Shopify`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=📺 TikTok`select`[]🇯🇵 日本低倍`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=🎮 Bahamut`select`[]🇯🇵 日本低倍`[]🇹🇼 台湾低倍`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=🎮 游戏下载`select`[]DIRECT`[]🌏 低倍节点
+
+custom_proxy_group=🎮 游戏加速`select`[]DIRECT`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=🌍 国外代理`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
+
+custom_proxy_group=🌍 守候线路`select`[]🌏 守候线路
+
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
+
+custom_proxy_group=📵 Advertising`select`[]REJECT`[]DIRECT
+
+custom_proxy_group=🚫 Reject`select`[]REJECT`[]DIRECT
+
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
+;设置分组标志位
 
 ;设置节点筛选标志位
 custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 MESL低倍`http://www.gstatic.com/generate_204`300,,50
