--- a/test2.ini
+++ b/test2.ini
@@ -1,6 +1,6 @@
 [custom]
 ;不要随意改变关键字，否则会导致出错
-;blackmatrix7
+;acl4SSR规则
 
 ;去广告：支持
 ;自动测速：支持
@@ -9,16 +9,9 @@
 ;增强中国IP段：支持
 ;增强国外GFW：支持
 
-
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GovCN/GovCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/Windows%20Update.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/%E5%9B%BD%E5%86%85%E7%9B%B4%E8%BF%9E.list
 
 ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
 ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
@@ -112,10 +105,12 @@ ruleset=🌍 国外代理,https://raw.githubusercontent.com/Yzaams/clash/main/ru
 ruleset=🌍 守候线路,https://raw.githubusercontent.com/Yzaams/clash/main/rule/xttlove.list
 
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
-
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
@@ -246,7 +241,7 @@ custom_proxy_group=🇰🇷 韩国游戏`url-test`^(?=.*(KR))(?=.*(Ucloud)).*$`h
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
-;设置节点筛选标志位
+;设置分组标志位
 
 enable_rule_generator=true
 overwrite_original_rules=true
