--- a/Done/XTT@MESL@CTC_blackmatrix7.ini
+++ b/Done/XTT@MESL@CTC_blackmatrix7.ini
@@ -157,7 +157,7 @@ custom_proxy_group=📵 Advertising`select`[]REJECT`[]DIRECT
 
 custom_proxy_group=🚫 Reject`select`[]REJECT`[]DIRECT
 
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏`
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换`[]🌏 低倍节点`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏
 ;设置分组标志位
 
 ;设置节点筛选标志位
