--- a/Done/XTT@MESL@CTC_blackmatrix7.ini
+++ b/Done/XTT@MESL@CTC_blackmatrix7.ini
@@ -20,6 +20,7 @@ ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
 
 ruleset=☁️ 微软云盘,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/MicrosoftEdge/MicrosoftEdge.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Yzaams/clash/main/rule/bing.list
 
