--- a/Done/XTT@MESL@CTC_blackmatrix7.ini
+++ b/Done/XTT@MESL@CTC_blackmatrix7.ini
@@ -183,22 +183,22 @@ custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1x)).*$`htt
 
 # SG高级
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|DigitalOcean|Cloudflare|Amazon|Eons|SG.GS))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|DigitalOcean|Eons|SG.GS))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP高级
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 MESL高级`url-test`^(?=.*(JP))(?=.*(Akari|Catixs|Amazon|Cloudflare|KDDI|SoNet|Akari|Softbank|Misaka|Google))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 MESL高级`url-test`^(?=.*(JP))(?=.*(Akari|Catixs|KDDI|SoNet|Softbank|Misaka))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(IEPL))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US高级
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 MESL高级`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Amazon|Misaka|Spectrum|Sprint|AT&T|Verizon|Cloudflare|Google))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 MESL高级`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Misaka|Spectrum|Sprint|AT&T|Verizon))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(Misaka))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # KR高级
 custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 MESL高级`url-test`^(?=.*(KR))(?=.*(Amazon))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 MESL高级`url-test`^(?=.*(KR))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # 游戏节点
 custom_proxy_group=🇭🇰 香港游戏`url-test`^(?=.*(HK))(?=.*(Ucloud)).*$`http://www.gstatic.com/generate_204`300,,50
