--- a/Done/XTT@MESL@CTC_blackmatrix7.ini
+++ b/Done/XTT@MESL@CTC_blackmatrix7.ini
@@ -87,40 +87,41 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级
+custom_proxy_group=🚀 节点选择low`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍
+custom_proxy_group=🚀 节点选择high`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎓 AI`select`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎓 AI`select`[]🇸🇬 狮城高级`[]🚀 节点选择high`[]🚀 手动切换
 
-custom_proxy_group=☁️ 谷歌云盘`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🛍️ GooglePlay`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Youtube`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🌐 谷歌服务`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=☁️ 谷歌云盘`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
+custom_proxy_group=🛍️ GooglePlay`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择low`[]🚀 手动切换
+custom_proxy_group=📺 Youtube`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
+custom_proxy_group=🌐 谷歌服务`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择high`[]🚀 手动切换
 
 custom_proxy_group=☁️ 微软云盘`select`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🇸🇬 狮城高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🇸🇬 狮城高级`[]🚀 节点选择high`[]🚀 手动切换
 
-custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国高级`[]🚀 节点选择high`[]🚀 手动切换
 
-custom_proxy_group=🤝 Telegram`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Facebook`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Twitter`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Telegram`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
+custom_proxy_group=🤝 Facebook`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
+custom_proxy_group=🤝 Twitter`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
+custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
 
-custom_proxy_group=🎧 Shopify`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎧 Shopify`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
 
-custom_proxy_group=📺 TikTok`select`[]🇯🇵 日本低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 TikTok`select`[]🇯🇵 日本低倍`[]🚀 节点选择low`[]🚀 手动切换
 
-custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🚀 节点选择low`[]🚀 手动切换
 
-custom_proxy_group=🎮 Bahamut`select`[]🇯🇵 日本低倍`[]🇹🇼 台湾低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🚀 节点选择low`[]🚀 手动切换
 
 custom_proxy_group=🎮 游戏下载`select`[]DIRECT`[]🌏 低倍节点`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍
 
 custom_proxy_group=🎮 游戏加速`select`[]DIRECT`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏`[]🚀 手动切换
 
-custom_proxy_group=🌍 国外代理`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌍 国外代理`select`[]🚀 节点选择low`[]🚀 手动切换
 
 custom_proxy_group=🌍 守候线路`select`[]🌏 守候线路
 
@@ -130,7 +131,7 @@ custom_proxy_group=📵 Advertising`select`[]REJECT`[]DIRECT
 
 custom_proxy_group=🚫 Reject`select`[]REJECT`[]DIRECT
 
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换`[]🌏 低倍节点`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择low`[]🚀 节点选择high`[]🇭🇰 香港游戏`[]🇹🇼 台湾游戏`[]🇸🇬 狮城游戏`[]🇯🇵 日本游戏`[]🇺🇲 美国游戏`[]🇰🇷 韩国游戏
 ;设置分组标志位
 
 ;设置节点筛选标志位
@@ -183,7 +184,7 @@ custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1x)).*$`htt
 
 # SG高级
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|DigitalOcean|Eons|SG.GS))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|Eons|SG.GS))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP高级
