--- a/Done/XTT@MESL@CTC_A4CLSS.ini
+++ b/Done/XTT@MESL@CTC_A4CLSS.ini
@@ -18,6 +18,8 @@ ruleset=📵 Advertising,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
 ruleset=🚫 Reject,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
 
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/Windows%20Update.list
+
 ruleset=☁️ GoogleDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.list
 ruleset=🛍️ GooglePlay,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🛍️ GooglePlay,[]DOMAIN-SUFFIX,services.googleapis.cn
