--- a/Done/XTT@MESL@CTC.ini
+++ b/Done/XTT@MESL@CTC.ini
@@ -12,6 +12,7 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/rule/Windows%20Update.list
 ruleset=📵 Advertising,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🚫 Reject,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
@@ -30,6 +31,7 @@ ruleset=🌐 Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 
 ruleset=☁️ onedrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/Yzaams/clash/main/rule/bing.list
 ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 
 ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
