--- a/Done/XTT@MESL@CTC.ini
+++ b/Done/XTT@MESL@CTC.ini
@@ -179,7 +179,7 @@ custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1x)).*$`htt
 
 # SG高级
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|Eons|SG.GS))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|Eons))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP高级
