--- a/Done/XTT@MESL@CTC.ini
+++ b/Done/XTT@MESL@CTC.ini
@@ -165,41 +165,41 @@ custom_proxy_group=🇺🇲 MESL低倍`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Amaz
 
 # KR低倍
 custom_proxy_group=🇰🇷 守候低倍`url-test`^(?=.*(KR))(?=.*(0.20x)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 MESL低倍`url-test`^(?=.*(KR))(?=.*(Amazon))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 MESL低倍`url-test`^(?=.*(KR))(?=.*(Amazon))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(3x))).*$`http://www.gstatic.com/generate_204`300,,50
 
 # HK高级
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 MESL高级`url-test`^(?=.*(HK))(?=.*(Eons|Dmit|HKT|HKBN|Catixs))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 MESL高级`url-test`^(?=.*(HK))(?=.*(Eons|Dmit|HKT|HKBN|Catixs))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(DMIT))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # TW高级
 custom_proxy_group=🇹🇼 守候高级`url-test`^(?=.*(TW))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 MESL高级`url-test`^(?=.*(TW))(?=.*(SoNet|Akile|Akari|Nerocloud))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 MESL高级`url-test`^(?=.*(TW))(?=.*(SoNet|Akile|Akari|Nerocloud))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # SG高级
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|Eons))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 MESL高级`url-test`^(?=.*(SG))(?=.*(Catixs|Akari|Eons|SG.GS))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP高级
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 MESL高级`url-test`^(?=.*(JP))(?=.*(Akari|Catixs|KDDI|SoNet|Softbank|Misaka))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 MESL高级`url-test`^(?=.*(JP))(?=.*(Akari|Catixs|KDDI|SoNet|Softbank|Misaka))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(IEPL))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US高级
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 MESL高级`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Misaka|Spectrum|Sprint|AT&T|Verizon))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(UDPN 3x))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 MESL高级`url-test`^(?=.*(US))(?=.*(Akile|Dmit|Misaka|Spectrum|Sprint|AT&T|Verizon))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(3x))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(Misaka))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # KR高级
 custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IPLC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 MESL高级`url-test`^(?=.*(KR))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 MESL高级`url-test`^(?=.*(KR))(?=.*(Amazon))(?!.*((0.1x)|(0.2x)|(0.5x)|(1x)|(3x))).*$`http://www.gstatic.com/generate_204`300,,50
 
 # 游戏节点
 custom_proxy_group=🇭🇰 香港游戏`url-test`^(?=.*(HK))(?=.*(Ucloud)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾游戏`url-test`^(?=.*(TW))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城游戏`url-test`^(?=.*(SG))(?=.*(UDPN 3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾游戏`url-test`^(?=.*(TW))(?=.*(3x)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城游戏`url-test`^(?=.*(SG))(?=.*(3x)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本游戏`url-test`^(?=.*(JP))(?=.*(Catixs)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国游戏`url-test`^(?=.*(US))(?=.*(T-mobile)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国游戏`url-test`^(?=.*(KR))(?=.*(Ucloud)).*$`http://www.gstatic.com/generate_204`300,,50
