--- a/正则语法.ini
+++ b/正则语法.ini
@@ -142,3 +142,11 @@ $	匹配字符串的结束
 32 中国邮政编码：[1-9]\d{5}(?!\d) (中国邮政编码为6位数字)
 33 IP地址：\d+\.\d+\.\d+\.\d+ (提取IP地址时有用)
 34 IP地址：((?:(?:25[0-5]|2[0-4]\\d|[01]?\\d?\\d)\\.){3}(?:25[0-5]|2[0-4]\\d|[01]?\\d?\\d))
+
+四、正则筛选
+正则过滤基本写法 
+(A).*(B)      节点名既有A也 有B
+(A)|(B)       节点名有A或者 B
+^(?!.*A)      节点名不含有A
+^(?!.*A).*(B)        节点名不含有A 但含有B
+^(?!*(A|B))       节点名既不含有 A也不含有B
