--- a/test.yaml
+++ b/test.yaml
@@ -73,54 +73,54 @@ proxy-groups:
 # tolerance 超过差值才会切换（默认100ms）
 
 # HK低倍
-- {name: 🇭🇰 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇭🇰 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇭🇰 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(hk).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇭🇰 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)hk.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇭🇰 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)hk.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇭🇰 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)hk.*(?:0\\.[1-9]|0\\.0[1-9])"}
 
 # TW低倍
-- {name: 🇹🇼 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇹🇼 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇹🇼 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(tw).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇹🇼 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)tw.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇹🇼 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)tw.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇹🇼 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)tw.*(?:0\\.[1-9]|0\\.0[1-9])"}
 
 # SG低倍
-- {name: 🇸🇬 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇸🇬 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇸🇬 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(sg).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇸🇬 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)sg.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇸🇬 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)sg.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇸🇬 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)sg.*(?:0\\.[1-9]|0\\.0[1-9])"}
 
 # JP低倍
-- {name: 🇯🇵 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇯🇵 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇯🇵 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(jp).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇯🇵 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)jp.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇯🇵 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)jp.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇯🇵 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)jp.*(?:0\\.[1-9]|0\\.0[1-9])"}
 
 # US低倍
-- {name: 🇺🇲 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇺🇲 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇺🇲 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(us).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇺🇲 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)us.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇺🇲 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)us.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇺🇲 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)us.*(?:0\\.[1-9]|0\\.0[1-9])"}
 
 # KR低倍
-- {name: 🇰🇷 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇰🇷 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
-- {name: 🇰🇷 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(kr).*(0\.[1-9])|(0\.0[1-9])"}
+- {name: 🇰🇷 守候低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)kr.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇰🇷 MESL低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)kr.*(?:0\\.[1-9]|0\\.0[1-9])"}
+- {name: 🇰🇷 CTC低倍, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)kr.*(?:0\\.[1-9]|0\\.0[1-9])"}
 
 # HK高级
-- {name: 🇭🇰 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
-- {name: 🇭🇰 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
-- {name: 🇭🇰 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(hk).*(?i)([1-9]\d*x)"}
+- {name: 🇭🇰 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)hk.*(?i)([1-9]\d*x)"}
+- {name: 🇭🇰 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)hk.*(?i)([1-9]\d*x)"}
+- {name: 🇭🇰 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)hk.*(?i)([1-9]\d*x)"}
 
 # TW高级
-- {name: 🇹🇼 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
-- {name: 🇹🇼 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
-- {name: 🇹🇼 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(tw).*(?i)([1-9]\d*x)"}
+- {name: 🇹🇼 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)tw.*(?i)([1-9]\d*x)"}
+- {name: 🇹🇼 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)tw.*(?i)([1-9]\d*x)"}
+- {name: 🇹🇼 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)tw.*(?i)([1-9]\d*x)"}
 
 # SG高级
-- {name: 🇸🇬 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
-- {name: 🇸🇬 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
-- {name: 🇸🇬 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(sg).*(?i)([1-9]\d*x)"}
+- {name: 🇸🇬 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)sg.*(?i)([1-9]\d*x)"}
+- {name: 🇸🇬 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)sg.*(?i)([1-9]\d*x)"}
+- {name: 🇸🇬 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)sg.*(?i)([1-9]\d*x)"}
 
 # JP高级
-- {name: 🇯🇵 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
-- {name: 🇯🇵 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
-- {name: 🇯🇵 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)(jp).*(?i)([1-9]\d*x)"}
+- {name: 🇯🇵 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)jp.*(?i)([1-9]\d*x)"}
+- {name: 🇯🇵 MESL高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL], filter: "(?i)jp.*(?i)([1-9]\d*x)"}
+- {name: 🇯🇵 CTC高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 CTC], filter: "(?i)jp.*(?i)([1-9]\d*x)"}
 
 # US高级
 - {name: 🇺🇲 守候高级, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 守候网络], filter: "(?i)(us).*(?i)([1-9]\d*x)"}
@@ -147,14 +147,14 @@ proxy-groups:
 - {name: 🇺🇲 美国高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇺🇲 MESL高级, 🇺🇲 CTC高级, 🇺🇲 守候高级]"}
 - {name: 🇰🇷 韩国高级, type: fallback, interval: 60, timeout: 5, lazy: true, use: [🇰🇷 MESL高级, 🇰🇷 CTC高级, 🇰🇷 守候高级]"}
 
-- {name: 🇭🇰 香港游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(hk).*(?i)(udpn)"}
-- {name: 🇹🇼 台湾游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(tw).*(?i)(udpn)"}
-- {name: 🇸🇬 狮城游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(sg).*(?i)(udpn)"}
-- {name: 🇯🇵 日本游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(jp).*(?i)(udpn)"}
+- {name: 🇭🇰 香港游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)hk.*(?i)(udpn)"}
+- {name: 🇹🇼 台湾游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)tw.*(?i)(udpn)"}
+- {name: 🇸🇬 狮城游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)sg.*(?i)(udpn)"}
+- {name: 🇯🇵 日本游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)jp.*(?i)(udpn)"}
 - {name: 🇺🇲 美国游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(us).*(?i)(udpn)"}
 - {name: 🇰🇷 韩国游戏, type: url-test, interval: 60, timeout: 5, tolerance: 100, lazy: true, use: [🛫 MESL, 🛫 CTC, 🛫 守候网络], filter: "(?i)(kr).*(?i)(udpn)"}
 
-- {name: 🌏 守候线路, type: url-test, interval: 60, timeout: 5, tolerance: 20, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk|tw|sg|jp).*(0\.[1-9])|(0\.0[1-9])"}"}
+- {name: 🌏 守候线路, type: url-test, interval: 60, timeout: 5, tolerance: 20, lazy: true, use: [🛫 守候网络], filter: "(?i)(hk|tw|sg|jp).*(?:0\.[1-9]|0\.0[1-9])"}"}
 
 # 规则集（yaml 文件每天自动更新）
 rule-providers:
